[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geological-cross-section-tools"
version = "1.0.0"
description = "Tools for extracting and analyzing geological features from PDF cross-sections"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "George Symonds", email = "george.symonds@fortescue.com"},
]
keywords = ["geology", "gis", "pdf", "cross-section", "georeferencing", "Correlation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Exploration",
    "Topic :: Day-To-Day Tools:: GIS",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "PyMuPDF>=1.23.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
geotools-gui = "geotools.main_gui:main"
geotools-batch = "geotools.batch_processor:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"